Revisión Caps 1 al 4
Los capítulos 1 al 4 ya están revisados en su versión final

--- a/1_Introduccion/1_3_Algunos_IDE/1_3_1_IDLE/1_3_1_IDLE.ipynb
+++ b/1_Introduccion/1_3_Algunos_IDE/1_3_1_IDLE/1_3_1_IDLE.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![Fig3_Encabezado.png](../../../Fig3_Encabezado.png)\n",
+    "\n",
+    "---------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## **1.3. Algunos IDE** <a id='1.3_Algunos-IDE'></a>"
    ]
   },
@@ -11,7 +20,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
     "[1.3.1. IDLE](#1.3.1_IDLE)\n",
     ">[1.3.1.1. Configuración Básica](#1.3.1.1_Configuracion-Basica)  \n",
     "[1.3.1.2. Entorno Interactivo (Shell)](#1.3.1.2_Entorno-Interactivo)  \n",
@@ -28,15 +36,14 @@
    "source": [
     "---\n",
     "\n",
-    "El escoger un entorno de trabajo depende de las necesidades, recursos y gustos, por ejemplo, yo empecé con IDLE y con él aprendí las bases de Python, luego me pasé a Spyder cuando tuve proyectos más grandes, sin embargo, para esta guía usé JupyterLab y VS Code, y hay muchos otros que no mencionaré ya que nunca he trabajado con ellos.\n",
-    "\n",
-    "A continuación, se introducirán el IDE que viene con la instalación de Python, sin embargo, cabe resaltar que esta es sólo una pincelada de todas sus funciones."
+    "El escoger un entorno de trabajo depende de las necesidades, recursos y gustos, por ejemplo, se puede empezar con IDLE para aprender las bases de Python, luego pasar a Spyder o VS Code para desarrollar proyectos más grandes o usar JupyterLab para proyectos de comunidad, etc. A continuación, se introducirá la interfaz y el manejo básico del IDE que viene con la instalación de Python."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='IDLE'></a>\n",
     "## 1.3.1 IDLE <a id='1.3.1_IDLE'></a>"
    ]
   },
@@ -44,15 +51,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Una vez instalado IDLE, este se ubicará donde ustedes le indiquen en el proceso de instalación. \n",
+    "En el proceso de instalación Python IDLE se guardará donde el usuario haya indicado, sin embargo, en Windows basta con buscar \"IDLE\" para encontrarlo.\n",
     "\n",
-    "Al abrirlo podremos ver la ventana principal de IDLE, como se muestra en la *Figura 1*. Como pueden ver es una interfaz muy sencilla y no tiene todos los botones, opciones, ventanas divididas y otras características de los IDE más sofisticados.\n",
+    "Al abrirlo se puede ver la ventana principal de IDLE, como se muestra en la *Figura 1*. Es una interfaz muy sencilla y no tiene todos los botones, opciones, ventanas divididas y otras características de los IDE más sofisticados.\n",
     "\n",
     "![Fig1_Shell_IDLE](Fig1_Shell_IDLE.jpg \"Figura 1: Ventana principal del IDLE\")\n",
     "\n",
     "###### *Figura 1: Ventana principal del IDLE*\n",
     "\n",
-    "Los tres “signos de mayor” (>>>) que se ven en la última línea son el prompt. IDLE nos presenta un entorno interactivo, lo que quiere decir que no es necesario que tengamos escrito un archivo aparte con nuestro código para empezar a experimentar con Python."
+    "Los tres “signos de mayor” (>>>) que se ven en la última línea son el prompt. IDLE presenta un entorno interactivo, lo que quiere decir que no es necesario que se tenga escrito un archivo aparte con el código para empezar a experimentar con Python."
    ]
   },
   {
@@ -66,15 +73,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Si queremos configurar aspectos de interacción con IDLE, lo podemos hacer en el menú **Options/Configure IDLE**. En la *Figura 2* se muestra la ventana de configuración. \n",
+    "Para configurarar diferentes aspectos del IDLE, se debe ir al menú **Options/Configure IDLE**. En la *Figura 2* se muestra la ventana de configuración. \n",
     "\n",
-    "Tres recomendaciones:\n",
+    "Recomendaciones:\n",
     "\n",
-    "1. Utilicen un tipo de letra (Font) que sea no proporcional (monospaced), donde cada letra ocupa el mismo espacio. Tipos como Courier, Courier New, Terminal y muchos terminados en “Mono” (Liberation Mono, Ubuntu Mono) son adecuados. Depende de las preferencias personales.\n",
+    "1. Utilizar un tipo de letra (Font) que sea no proporcional (monospaced), donde cada letra ocupa el mismo espacio. Tipos como Courier, Courier New, Terminal y muchos terminados en “Mono” (Liberation Mono, Ubuntu Mono) son adecuados. Depende de las preferencias personales.\n",
     "\n",
-    "2. Recomiendo usar un tema oscuro, y aumentar el tamaño de la letra a 11 o 12 puntos, debido a que no desgasta tanto la vista al momento de trabajar por un tiempo prolongado.\n",
+    "2. Usar un tema oscuro, y aumentar el tamaño de la letra a 11 o 12 puntos para no desgastar tanto la vista al momento de trabajar por un tiempo prolongado.\n",
     "\n",
-    "3. Mantengan la [indentación](../../../3_Estructuras_Logicas/3_Estructuras_Logicas.ipynb#3.1.1.1_Indentacion \"¿Por qué la identación en Python es muy importante?\") estándar en cuatro espacios. Más adelante será claro por qué esto es buena idea en Python.\n",
+    "3. Mantener la [indentación](../../../3_Estructuras_Logicas/3_Estructuras_Logicas.ipynb#3.1.1.1_Indentacion \"¿Por qué la indentación en Python es muy importante?\") estándar en cuatro espacios. Más adelante será claro por qué esto es buena idea en Python.\n",
     "\n",
     "**Nota:** La primeras dos recomendaciones aplican para la configuración de cualquier IDE, y la última para cualquiera con el que se vaya usar Python.\n",
     "    \n",
@@ -94,7 +101,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Como les decía, IDLE es interactivo. Eso quiere decir que podemos usar comandos de Python directamente en la ventana. Por ejemplo, en la Figura 3 podemos ver como asigno el valor 3 a la variable `a`, 4 a la variable `b`, y luego asigno a la variable `c` la multiplicación de `a*b` y si invoco el nombre de una variable `c` y oprimo <Enter> veré en pantalla su valor actual.\n",
+    "Como se mencionó anteriormente, IDLE es interactivo. Eso quiere decir que se puede usar comandos de Python directamente en la ventana. Por ejemplo, en la Figura 3 se muestra como se asigna el valor 3 a la variable `a`, 4 a la variable `b`, y luego se indica que la variable `c` es la multiplicación de `a*b`. Si se invoca el nombre de la variable `c` y se oprime <Enter> se verá en pantalla el valor actual de `c`.\n",
     "\n",
     "![Fig3_Interaccion_Shell_IDLE](Fig3_Interaccion_Shell_IDLE.gif)\n",
     "\n",
@@ -112,13 +119,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "En nuestro caso el Shell nos va a servir para hacer ensayos, hacer consultas con el comando `help`, y ejecutar programas, sin embargo, cuando vayamos a escribir programas debemos abrir un documento .py en blanco (*Figura 4*), para esto debemos ir a **File/New File** (**Ctrl+N**).\n",
+    "La mayoría de los casos el Shell se usa para hacer ensayos, consultas con el comando `help`, y ejecutar programas, sin embargo, cuando se necesite escribir programas se debe abrir un documento `.py` en blanco (*Figura 4*), para esto debemos ir a **File/New File** u oprimir (**Ctrl+N**).\n",
     "    \n",
     "![Fig4_Hola_Mundo_IDLE](Fig4_Hola_Mundo_IDLE.jpg \"Figura 4: Hola mundo en IDLE\")\n",
     "\n",
     "###### *Figura 4: Hola mundo en IDLE*  \n",
-    "###### Descargar: [Programa 0 - Hola-mundo-IDLE.py](http://localhost:8888/files/Documents/GitHub/Pequena-Guia-Python/1-Introduccion/1-3-1%20IDLE/Pgr-0_Hola-Mundo-IDLE.py?_xsrf=2%7Ccd28966d%7Cdfd2972442343649119a1aa2c6f9590a%7C1571969686)\n",
-    "\n",
+    "###### Descargar: [Programa 0 - Hola-mundo-IDLE.py](Pgr0_Hola_Mundo_IDLE.py)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 1.3.1.4. Ejecutar el Código <a id='1.3.1.4_Ejecutar-el-Codigo'></a>\n",
     "\n",
     "Para ejecutar el programa, primero hay que guardarlo y luego dirigirse a **Run/Run Module** o solo oprimir **F5**, y el programa será ejecutado en el Shell, como se ve en la *Figura 5*.\n",
@@ -139,7 +151,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para poder utilizar módulos de terceros estos deben ser instalados, [aquí](../../../9_Modulos/9_Modulos_y_Paquetes.ipynb#9_Modulos_y_Paquetes#9.4.1_Instalación-de-Paquetes) puede encontrar las instrucciones para hacerlo en el sistema operativo Windows."
+    "Para poder utilizar módulos de terceros estos deben ser instalados, [aquí](../../../9_Modulos/9_Modulos_y_Paquetes.ipynb#9_Modulos_y_Paquetes#9.4.1_Instalación-de-Paquetes) se puede encontrar las instrucciones para hacerlo en el sistema operativo Windows."
    ]
   },
   {
