--- a/1_Introduccion/1_Introduccion.ipynb
+++ b/1_Introduccion/1_Introduccion.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![Fig3_Encabezado.png](../Fig3_Encabezado.png)\n",
+    "\n",
+    "---------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 1. Introducción <a id='1_Introduccion'></a>"
    ]
   },
@@ -11,14 +20,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
     "### [1.1. Presentación](#1.1_Presentacion)  \n",
     "### [1.2. Instalación](#1.2_Instalacion)  \n",
     ">[Opción 1: Python](#Opcion-1_Python)  \n",
     "[Opción 2: Anaconda](#Opcion-2_Anaconda)  \n",
     "\n",
     "### [1.3. Algunos IDE](1_3_Algunos_IDE/1_3_1_IDLE/1_3_1_IDLE.ipynb#1.3_Algunos-IDE) <!--(https://mybinder.org/Algunos-IDE/IDLE)-->  \n",
-    ">[1.3.1. IDLE](1_3_Algunos_IDE/1_3_1_IDLE/1_3_1_IDLE.ipynb#1.3.1_IDLE) <!--(https://mybinder.org/Algunos-IDE/IDLE)-->   \n",
+    ">[1.3.1. IDLE](1_3_Algunos_IDE/1_3_1_IDLE/1_3_1_IDLE.ipynb#IDLE) <!--(https://mybinder.org/Algunos-IDE/IDLE)-->   \n",
     "[1.3.2. JupyterLab](1_3_Algunos_IDE/1_3_2_JupyterLab/1_3_2_JupyterLab.ipynb#1.3.2_JupyterLab) <!--(https://mybinder.org/Algunos-IDE/JupyterLab)-->  \n",
     "\n",
     "### [1.4. Instrucciones Guía Interactiva](1_4_Instrucciones_Guia_Interactiva/1_4_Instrucciones_Guia_Interactiva.ipynb#1.4_Insutrucciones-Guia-Interactiva) <!--(https://mybinder.org/Instrucciones)-->"
@@ -37,31 +45,65 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La presente guía esta creada a partir de la Pequeña Guía de Python Versión 0.5, del profesor Leonardo Rivera Cadavid y usada en el curso de Implementación de algoritmos de Ingeniería industrial, en la Universidad del Valle,  Cali, Colombia, 2017.\n",
+    "Esta guía es una herramienta para la Escuela de Ingeniería Industrial de la Universidad del Valle para apoyarla en el cumplimiento de su objetivo de desarrollar la competencia de programación en los estudiantes de pregrado.    \n",
     "\n",
-    "El objetivo principal es ayudar a una rápida familiarización con el lenguaje Python, el programa de desarrollo IDLE que viene incluido con este, el administrador de paquetes Anaconda y algunas de las aplicaciones incluidas allí, con el fin de apoyar  la [Guía de implementación de algoritmos de ingeniería industrial](https://sites.google.com/correounivalle.edu.co/guia-algortimos-industrial/home \"Ir a la Guía de implementación de algoritmos de ingeniería industrial\") de la Universidad valle, Cali, Colombia. \n",
+    "Está diseñada para guiar al estudiante en el proceso de la implementación computacional de diez algoritmos explicados en diferentes materias y semestres, con el fin de que durante la carrera tenga varios proyectos donde deba programar e integrar esta habilidad con lo aprendido en las asignaturas profesionales obligatorias y su contexto.   \n",
     "\n",
-    "Para mayor información sobre el lenguaje, su historia, su filosofía y su creador lo invito a consultar recursos como:\n",
+    "Para implementar y estructurar los algoritmos la guía utiliza como base el lenguaje de programación Python y el paradigma de programación imperativo por bloques. Se escogió este lenguaje porque es fácil de aprender en poco tiempo y principalmente porque el estudiante lo utilizó en la asignatura de Algoritmia y Programación en segundo semestre. Igualmente, el paradigma fue escogido por el motivo anterior y finalmente se escogió una implementación por bloques porque de esta forma el algoritmo se puede dividir en problemas más pequeños facilitando el proceso de programación. \n",
     "\n",
-    " > https://en.wikipedia.org/wiki/Python_(programming_language)  \n",
-    "https://www.python.org/about/  \n",
-    "https://docs.anaconda.com  "
+    "\n",
+    "#### **Estructura**\n",
+    "\n",
+    "La guía está dividida en dos partes principales:\n",
+    "\n",
+    "- **Parte 1 / Guía de Python:** (Capítulos 2 al 9)\n",
+    "\n",
+    "    Es un manual de consulta donde se explican y muestran con ejemplos interactivos todos los componentes del lenguaje que el estudiante debe conocer para implementar los algoritmos. Comprende desde los elementos básicos como el manejo de variables, operadores aritméticos, estructuras de decisión y repetición hasta lectura / escritura de archivos y manejo de módulos. \n",
+    "    \n",
+    "    Esta parte de la guía se basa en la Pequeña Guía de Python Versión 0.5, del profesor Leonardo Rivera Cadavid y usada en el curso de Implementación de Algoritmos de Ingeniería Industrial, en la Universidad del Valle, Cali, Colombia, 2017.\n",
+    "    \n",
+    "- **Parte 2 - Laboratorios:** (Capítulo 10)\n",
+    "\n",
+    "    Son las guías de implementación de los algoritmos, para cada uno de ellos contiene:\n",
+    "    \n",
+    "    - **Descripción:** Descripción breve del algoritmo que es y para que se suele usar normalmente.      \n",
+    "    - **Ejemplo:** Ejemplo que se puede realizar a mano o en Excel para que el estudiante se familiarice y aprenda cada paso del algoritmo.      \n",
+    "    - **Análisis del problema:** Análisis detallado para hacer implementación del algoritmo, objetivo, análisis de entradas, salidas y proceso.       \n",
+    "    - **Plantilla:** Es un conjunto de páginas donde se estructura en el algoritmo en (Importe de módulos / Funciones auxiliares / Programa principal), donde el estudiante tiene las instrucciones y el espacio para programar. La plantilla es el espacio donde el estudiante puede realizar todo el proceso de implementación del algoritmo, y una vez llena lo puede pasar en limpio al archivo ‘ .py ‘ (Script de Python).        \n",
+    "    \n",
+    "        Cada función auxiliar es un bloque, por lo que cada una tiene una página por aparte que contiene:   \n",
+    "        \n",
+    "        - **Objetivo:** Explicación breve de lo que debe hacer la función.     \n",
+    "        - **Análisis de entrada:** Listado con los ejemplos de cada entrada que debe recibe la función.     \n",
+    "        - **Análisis de salidas:** Listado con los ejemplos de cada salida que debe retornar la función, según las entradas mostradas anteriormente.     \n",
+    "        - **Espacio para programar:** Celda para programar en Python.     \n",
+    "        - **Material de apoyo:** Links a secciones específicas de la Guía de Python, donde encontrará ejemplos para poder programar la función.     \n",
+    "        \n",
+    "    - **Práctica:** Caso práctico donde se presenta un problema en contexto al estudiante donde debe hacer uso del programa que realizó para obtener rápidamente unos resultados y hacer un análisis de ellos integrando los conceptos aprendidos en la carreara.   \n",
+    "\n",
+    "La guía está implementada en el entorno de desarrollo de JupyterLab para tener:\n",
+    "\n",
+    "- **Ejemplos interactivos:** El estudiante además de ver el código de los ejemplos los puede correr, modificar, experimentar con ellos y ver los resultados, de esta manera se facilita la comprensión de la lógica, la sintaxis y la función del elemento que se esté explicando.\n",
+    "\n",
+    "- **Implementación guiada:** Para implementar el algoritmo el estudiante debe seguir el flujo y las indicaciones de la plantilla que se enlaza con la Guía de Python, realizando todo el proceso de implementación en la misma guía.\n",
+    "\n",
+    "Por lo anterior la guía esta subida en Binder y se puede abrir en un entorno completamente online en cualquier computadora que tenga buena conexión, sin embargo, lo más recomendable es [descargarla](1_4_Instrucciones_Guia_Interactiva/1_4_Instrucciones_Guia_Interactiva.ipynb#Descarga \"Ir a las instrucciones para descargar la guía\"), pero previamente se debe tener instalado Python y JupyterLab como se explica en la siguiente sección."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **1.2. Instalación** <a id='1.2_Instalacion'></a>"
+    "## **1.2. Instalación de Python** <a id='1.2_Instalacion'></a>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para poder empezar a programar con el lenguaje Python, se debe descargar un intérprete del lenguaje y un IDE (Integrated Development Environment, Entorno Integrado de Desarrollo), a continuación, se mostrarán dos formas más comunes para hacerlo.\n",
+    "Para poder empezar a programar con el lenguaje Python, se debe descargar un intérprete del lenguaje y un IDE (Integrated Development Environment / Entorno Integrado de Desarrollo), a continuación, se mostrarán las dos formas más comunes para hacerlo.\n",
     "\n",
-    "###### **Nota:** Recomiendo instalar el administrador de paquetes y entornos Anaconda, porque tien no hay necesidad de instalar módulos aparte."
+    "###### **Nota:** Se recomienda instalar el administrador de paquetes y entornos Anaconda como índica la opción 2, porque con el no hay necesidad de instalar módulos aparte."
    ]
   },
   {
@@ -79,17 +121,17 @@
     "- Interprete del lenguaje\n",
     "- IDLE: Programa nativo para escribir código.\n",
     "\n",
-    "###### **Nota:** IDLE es considerado como un IDE, sin embargo, no lo considero un entorno sofisticado como Spyder o JupyterLab, de todas maneras, es un programa liviano, amigable y fácil de usar.\n",
+    "###### **Nota:** IDLE es considerado como un IDE, sin embargo, no es un entorno sofisticado como Spyder o JupyterLab, de todas maneras, es un programa liviano, amigable y fácil de usar.\n",
     "\n",
     "#### - Instalación \n",
     "\n",
-    "Para ver los archivos y las instrucciones de instalación del intérprete de Python 3 ingrese [aquí](www.python.org/downloads/ \"www.python.org/downloads/\"). \n",
+    "Para ver los archivos y las instrucciones de instalación del intérprete de Python 3 hay que ingresar [aquí](https://www.python.org/downloads/ \"ir a la página de descargas de Python\") y seguir las instrucciones según el sistema operativo que se tenga instalado. Hay versiones para Windows, Mac OS X y Linux.\n",
     "\n",
-    "Por favor sigan las instrucciones para su respectivo sistema operativo. Hay versiones para Windows, Mac OS X y todos los sabores de Linux.\n",
+    "En este momento la versión vigente es la 3.8.0, en muchos casos aún ofrecen instaladores y otros recursos para Python 2.7. La razón es que existen muchos programas escritos en versiones anteriores, entonces aún se presta soporte para ellas. Sin embargo, el desarrollo y soporte para Python 2.7 se detendrá paulatinamente, y todos los sistemas migrarán a la versión más actualizada. **Por ello para el desarrollo de la guía se utilizará Python 3.x**.\n",
     "\n",
-    "En este momento la versión vigente es la 3.8.0. Verá que en muchos casos aún ofrecen instaladores y otros recursos para Python 2.7. La razón es que existen muchos programas escritos en versiones anteriores, entonces aún se presta soporte para ellas. Sin embargo, el desarrollo y soporte para Python 2.7 se detendrá paulatinamente, y todos los sistemas migrarán a la versión más actualizada. **Por ello para el desarrollo de la guía utilizaremos Python 3.x**.\n",
+    "Hay que tener en cuenta que la instalación de esta opción es más rápida que la opción 2, sin embargo, solo se tendrá preinstalados los módulos de la [libreria estándar](../9_Modulos/9_Modulos_y_Paquetes.ipynb#9.3_Libreria-Estandar \"Ir al apartado 9.3. Libreria Estandar\"), así que en el momento de ser requeridos otros módulos como numpy, matplotlib y pandas, estos deberán ser instalados por medio del administrador de paquetes **pip**.\n",
     "\n",
-    "Tenga en cuenta que la instalación de esta opción es más rápida que la opción 2, sin embargo, solo tendrá preinstalados los módulos de la [libreria estándar](../9_Modulos/9_Modulos_y_Paquetes.ipynb#9.3_Libreria-Estandar \"Ir al apartado 9.3. Libreria Estandar\"), así que en el momento de ser requeridos otros módulos, estos deberán ser instalados por medio del administrador de paquetes **pip**, en esta guía se explicarán los pasos para la [instalación en Windows](../9_Modulos/9_Modulos_y_Paquetes.ipynb#9.4.1_Instalacion-de-Paquetes \"Ir al apartado 9.4.1. Instalacion de Paquetes\")."
+    "En esta guía se explicarán los pasos para la [instalación de paquetes](../9_Modulos/9_Modulos_y_Paquetes.ipynb#9.4.1_Instalacion-de-Paquetes \"Ir al apartado 9.4.1. Instalacion de Paquetes\") en Windows y también será necesario instalar JupyterLab por aparte con **pip** como se explica [aquí](1_3_Algunos_IDE/1_3_2_JupyterLab/1_3_2_JupyterLab.ipynb#instalacion \"Ir al apartado de instalación del subcapítulo JupyterLab\")."
    ]
   },
   {
@@ -105,23 +147,23 @@
    "source": [
     "#### - ¿Qué es?\n",
     "\n",
-    "Anaconda es un administrador gratuito de paquetes y de entornos, y una distribución de data science de Python y R con una colección de más de 1,500+ paquetes de código abierto. Su instalación es fácil, y ofrece soporte comunitario gratuito.\n",
+    "Anaconda es un administrador gratuito de paquetes y de entornos, y una distribución de Data Science de Python y R con una colección de más de 1,500 paquetes de código abierto. Su instalación es fácil, y ofrece soporte comunitario gratuito.\n",
     "\n",
     "#### - Contenido:\n",
     "\n",
     "- Interprete de lenguaje Pyhon. \n",
     "- Anaconda Navigator: GUI (Graphical User Interface - Interfaz Gráfica de Usuario).\n",
     "- Más de 250 paquetes preinstalados\n",
-    "\n",
-    "###### **Nota:** Los paquetes preinstalados en para la versión actual en Windows los puede encontrar [aquí](https://docs.anaconda.com/anaconda/packages/py3.7_win-64/ \"Ir a la documentación oficial de Anaconda\")\n",
     "- Jupyter Notebook\n",
     "- JupyterLab\n",
     "- Spyder\n",
     "- Otras herramientas que **No** se utilizarán en la guía, como Glueviz, Orange 3, RStudio y VS Code.\n",
     "\n",
+    "###### **Nota:** Los paquetes preinstalados para la versión actual en Windows se pueden encontrar [aquí](https://docs.anaconda.com/anaconda/packages/py3.7_win-64/ \"Ir a la documentación oficial de Anaconda\")\n",
+    "\n",
     "#### - Instalación \n",
     "\n",
-    "Para ver los archivos y las instrucciones de instalación de Anaconda para los diferentes sistemas operativos ingrese [aquí](https://www.anaconda.com/distribution/ \"https://www.anaconda.com/distribution/\"). \n",
+    "Para ver los archivos y las instrucciones de instalación de Anaconda para los diferentes sistemas operativos se debe ingresar [aquí](https://www.anaconda.com/distribution/ \"https://www.anaconda.com/distribution/\"). \n",
     "\n",
     "En este momento la versión vigente es la 2019.10 para Python 3.7"
    ]
