--- a/2_Elementos_Basicos/2_Elementos_Basicos.ipynb
+++ b/2_Elementos_Basicos/2_Elementos_Basicos.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![Fig3_Encabezado.png](../Fig3_Encabezado.png)\n",
+    "\n",
+    "---------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a id='2_Elementos-Basicos'></a>\n",
     "# 2. Elementos Básicos"
    ]
@@ -12,7 +21,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
     "### [2.1 Variables](#2.1_Variables)  \n",
     ">[2.1.1. Tipos de Variables](#2.1.1_Tipos-de-Variables)  \n",
     ">>[2.1.1.1 Conversión de variables](#2.1.1.1_Conversion-de-variables)    \n",
@@ -24,8 +32,8 @@
     "### [2.2 Operadores Aritméticos](#2.2_Operadores-Aritmeticos)  \n",
     "### [2.3 Ayuda y Directorio](#2.3_Ayuda-y-Directorio)  \n",
     "### [2.4 Programas en Python](2_4_Programas_en_Python/2_4_Programas_en_Python.ipynb#2-4_Programas-en-Python) <!--(https://mybinder.org/)-->  \n",
-    ">[2.4.1 Análisis del Problema](2_4_Programas_en_Python/2_4_Programas_en_Python.ipynb#2.4.1_Analsis) <!--(https://mybinder.org/)-->  \n",
-    "[2.4.2 Código en Python](2_4_Programas_en_Python/2_4_Programas_en_Python.ipynb#2.4.2_Codigo-en-Python) <!--(https://mybinder.org/)-->  \n",
+    ">[2.4.1 Análisis del Problema](2_4_Programas_en_Python/2_4_Programas_en_Python.ipynb#Analsis) <!--(https://mybinder.org/)-->  \n",
+    "[2.4.2 Código en Python](2_4_Programas_en_Python/2_4_Programas_en_Python.ipynb#CodigoPython) <!--(https://mybinder.org/)-->  \n",
     "\n",
     "---"
    ]
@@ -41,23 +49,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Las \"Variables\" en Python tienen un manejo diferente a comparación de otros lenguajes como Java, C o Visual Basic, lo cual puede generar confusiones para quienes lo ignoran, y originar malas prácticas que en algunos casos generan errores en el código, si bien estas diferencias no deberían constituir una cuestión fundamental para el desarrollo de la guía, considero conveniente mencionarlas.\n",
+    "Las \"Variables\" en Python tienen un manejo diferente a comparación de otros lenguajes como Java, C o Visual Basic, lo cual puede generar confusiones para quienes lo ignoran y originar malas prácticas que en algunos casos generan errores en el código. Si bien estas diferencias no deberían constituir una cuestión fundamental para el desarrollo de la guía es conveniente mencionarlas.\n",
     "\n",
     "**1. Python es un lenguaje de tipado dinámico:** <a id='Tipado-dinamico'></a>  \n",
     "\n",
-    "Los lenguajes de programación convencionales permiten almacenar datos en la memoria del sistema, a través de las variables que son como una especie de \"contenedores\" donde se guarda información; se dece que los lenguajes son estáticos o de tipado estático, cuando los contenedores son rígidos, sólo tienen una forma en particular y sólo pueden almacenar un tipo de dato, mientras que los lenguajes dinámicos o de tipado dinámico usan contenedores flexibles que se adecuan a la forma del tipo de dato, Python es de este último tipo.\n",
+    "Los lenguajes de programación convencionales permiten almacenar datos en la memoria del sistema a través de las variables, que son como una especie de \"contenedores\" donde se guarda información; se dice que los lenguajes son estáticos o de tipado estático cuando sólo pueden almacenar un tipo de dato, es decir, los contenedores son rígidos y sólo tienen una forma en particular, mientras que los lenguajes dinámicos o de tipado dinámico como Python usan contenedores flexibles que se adecuan a la forma del tipo de dato.\n",
     "\n",
     "**2. Python entiende las \"Variables\" de otra manera:** <a id='Entiende-las-variables'></a>  \n",
     "\n",
     "En Python todo es un objeto, los números, las cadenas, las clases, las listas, los módulos, las funciones, las variables etc, y como se verá [aquí](#Min-eje_Tipos-de-objetos 'Mini_Ejemplo: Tipos de objetos') cada objeto está a asociado a un tipo o clase.\n",
     "\n",
-    "Por lo anterior, la forma en la que Python entiende las \"variables\" es un tanto diferente respecto de otros lenguajes, ya que, en lugar de verlas como \"contenedores\", las ve como \"etiquetas\" asociadas a un valor (objeto en ejecución) determinado, cuya función es, identificar, o referenciar un objeto en específico.\n",
+    "Python entiende las variables como \"etiquetas\" asociadas a un objeto con un valor determinado (objeto en ejecución), permitiendo identificar o referenciar ese objeto en específico.\n",
+    "\n",
     "\n",
     "**3. Python es un lenguaje fuertemente tipado:** <a id='Fuertemente-tipado'></a>  \n",
     "\n",
     "También puede decir de tipado fuerte, o tipado.\n",
     "\n",
-    "Esto significa que en Python el tipo de variable (objeto), no cambian repentinamente y estos cambios requieren una [conversión](#2.1.1.1_Conversion-de-variables '2.1.1.1 Conversión de variables') explicita, por lo cual no se puede hacer operaciones entre variables de tipos diferentes (objetos de tipo de diferentes), igual que como en las matemáticas no se puede sumar peras con manzanas, por ejemplo en Python no se puede operar cadenas con números, aunque estas contengan números. "
+    "Esto significa que en Python el tipo de variable (objeto) no cambian repentinamente y estos cambios requieren una [conversión](#2.1.1.1_Conversion-de-variables '2.1.1.1 Conversión de variables') explicita, por lo cual, no se puede hacer operaciones entre variables de tipos diferentes (objetos de tipo de diferentes), igual que como en las matemáticas no se puede sumar peras con manzanas. Por ejemplo, en Python no se puede operar números con cadenas, aunque estas sean compuestas solo por valores numéricos."
    ]
   },
   {
@@ -71,14 +80,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para averiguar el tipo de una variable se usa el comando `type()`, y entre los paréntesis se pone la variable que se quiera consultar.\n",
+    "Para averiguar el tipo de una variable se usa el comando `type()` y entre paréntesis se pone la variable que se quiera consultar.\n",
     "\n",
-    "Existen varios tipos de variables, pero la básicas son las [numéricas](#Variables-numericas), de [texto](#Variables-de-texto) y [vacías](#Variables-vacias).\n",
-    "###### **Nota:** Hay otros tipos de variables adicionales que veremos más adelante.\n",
+    "Existen varios tipos de variables, pero la básicas son las [numéricas](#Variables-numericas), las de [texto](#Variables-de-texto) y las [vacías](#Variables-vacias).\n",
+    "###### **Nota:** Hay otros tipos de variables adicionales que se explicarán más adelante.\n",
     "\n",
     "#### a. Variables numéricas <a id='Variables-numericas'></a>\n",
     "\n",
-    "Son números enteros, reales, y complejos, aquí veremos los dos primeros.\n",
+    "Son números enteros, reales, y complejos, aquí se muestran los dos primeros.\n",
     "\n",
     "- **Enteros / Integer / `int`** <a id='Min-eje_Variables-int'></a>\n",
     "\n",
@@ -182,13 +191,13 @@
    "metadata": {},
    "source": [
     "#### c. Variables vacías <a id='Variables-vacias'></a>\n",
-    "En algunos casos tal vez encuentre necesario crear una variable vacía y posteriormente asignarle un valor, para esto se utiliza la palabra reservada `None`.\n",
+    "En algunos casos es necesario crear una variable vacía y posteriormente asignarle un valor, para esto se utiliza la palabra reservada `None`.\n",
     "<a id='Min-eje_Variables-vacias'></a>\n",
     "\n",
     "~~~python\n",
     "# Mini_Ejemplo: Variables vacías\n",
     "\n",
-    "Variable_vacia=None #Sería como una etiqueta que por el momento no la hemos asignado a nada.\n",
+    "Variable_vacia=None # Es como crear una etiqueta que por el momento no se le asignado a nada.\n",
     "print(\"La variable Variable_vacia es una variable tipo: \",type(Variable_vacia))\n",
     "~~~"
    ]
@@ -208,7 +217,7 @@
    "source": [
     "### 2.1.1.1 Conversión de variables <a id='2.1.1.1_Conversion-de-variables'></a>\n",
     "\n",
-    "Es muy normal tener que convertir un tipo de variable a otro, en este apartado veremos las conversiones más comunes, más adelante veremos otras. \n",
+    "Es muy normal tener que convertir un tipo de variable a otro, en este apartado están las conversiones más comunes. \n",
     "\n",
     "- Toda variable puede convertirse a una cadena de texto con el comando `str()`, poniendo entre paréntesis la variable que se quiera convertir: <a id='Min-eje_Conversion-a-str'></a>\n",
     "\n",
@@ -241,7 +250,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Si tenemos un número como una cadena de texto, este se puede convertir en integer o float si es decimal, con los comandos `float()`, o `int()`, de esta manera se puede usar para realizar [operaciones aritméticas](#2.2_Operadore_aritmeticos \"ir al apartado de operadores aritméticos\") <a id='Min-eje_str-a-numero'></a>\n",
+    "- Si se tiene un número como una cadena de texto y se necesita hacer [operaciones aritméticas](#OpAritmeticos \"ir al apartado de operadores aritméticos\"), se deben convertir a un número entero o real, con los comandos `int()` o `float()` respectivamente. <a id='Min-eje_str-a-numero'></a>\n",
     "\n",
     "~~~python\n",
     "# Mini_Ejemplo: Conversión str a número\n",
@@ -267,7 +276,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Si se intenta convertir una cadena de un número decimal a entero, arrojará *value error*.\n",
+    "- Si se intenta convertir una cadena de un número decimal a entero, arrojará *value error*.\n",
     "<a id='Min-eje_str-decimal-a-int'></a>\n",
     "\n",
     "~~~python\n",
@@ -328,7 +337,7 @@
    "source": [
     "### 2.1.1.2 Tipos de objetos <a id='2.1.1.2_Tipos-de-objetos'></a>\n",
     "\n",
-    "Como se mencionó anteriormente en Python sus objetos están asociados a un tipo o clase, el siguiente ejemplo muestra el tipo de algunos de estos.<a id='Min-eje_Tipos-de-objetos'></a>\n",
+    "Como se mencionó anteriormente en Python sus objetos están asociados a un tipo o clase, el siguiente ejemplo muestra el tipo de algunos.<a id='Min-eje_Tipos-de-objetos'></a>\n",
     "    \n",
     "~~~python\n",
     "# Mini_Ejemplo: Tipos de objetos\n",
@@ -368,21 +377,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para crear una variable tenga en cuenta: \n",
+    "Para crear una variable hay que tener en cuenta: \n",
     "\n",
-    "- Como Python es un [lenguaje de tipado dinámico](#Tipado-dinamico 'Qué significa que Python es un lenguaje de tipado dinámico') no se declara el tipo de variable antes de asignarle un valor, solamente se le asigna y ya.\n",
+    "- Como Python es un [lenguaje de tipado dinámico](#Tipado-dinamico 'Qué significa que Python es un lenguaje de tipado dinámico') no se declara el tipo de variable antes de asignarle un valor, solamente se asigna y ya.\n",
     "\n",
-    "- **No utilice** palabras reservadas del sistema para nombrar variables, por ejemplo, int, list, print ... normalmente son las palabras que al escribirlas en un editor de Python cambian de color automáticamente.\n",
+    "- **No utilizar** palabras reservadas del sistema para nombrar variables. Por ejemplo, int, list, print ... normalmente son las palabras que al escribirlas en un editor de Python cambian de color automáticamente.\n",
     "\n",
-    "- Para Python es diferente mayúsculas y minúsculas, y toma en cuenta el uso de caracteres con tilde, por lo tanto, las variables A, Á, a y á, son diferentes. \n",
+    "- Python diferencia entre mayúsculas y minúsculas, además tiene en cuenta el uso de caracteres especiales como las tildes, por lo tanto, las variables A, Á, a y á son diferentes.  Lo más recomendable es no usar variables con tilde. \n",
     "\n",
-    "- Recomiendo no usar variables con tilde, porque se presta para tener un *NameError*.  \n",
-    "\n",
-    "- Al nombrar una variable no se puede usar espacios si necesita separadores use guion bajo, guion sencillo o una combinación de minúsculas y mayúsculas.\n",
+    "- Al nombrar una variable no se puede usar espacios, si se necesitan separadores se deben usar guion bajo, guion sencillo o una combinación de minúsculas y mayúsculas.\n",
     "\n",
     "- El decimal en Python se representa con el punto ( . ), si se usa coma ( , ) arrojará *sintaxis error*.\n",
     "\n",
-    "- Python no distingue entre el uso de comillas dobles \" \" o sencillas ' ', pero si se quiere que un string tenga comillas dobles se debe crea con comillas simples. <a id='Min-eje_Cadenas-con-comillas'></a>\n",
+    "- Python no distingue entre el uso de comillas dobles \" \" o sencillas ' ', pero si se quiere que un string contenga comillas dobles se debe crear con comillas simples y viceversa. <a id='Min-eje_Cadenas-con-comillas'></a>\n",
     "\n",
     "~~~python\n",
     "# Mini_Ejemplo: Cadenas con comillas\n",
@@ -405,7 +412,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- También es posible asignar varias variables en una sola línea, no importa que cada variable sea de un tipo diferente.<a id='Min-eje_Asignacion-de-variables'></a>\n",
+    "- También es posible asignar varias variables en una sola línea, no importa que cada variable sea de un tipo diferente. <a id='Min-eje_Asignacion-de-variables'></a>\n",
     "\n",
     "~~~python\n",
     "# Mini_Ejemplo: Asignación de variables\n",
@@ -436,9 +443,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lo más común es que los valores de las variables, sean ingresados por el usuario, leyendo un archivo de texto, lo cual se explicará en el [capítulo 7](../7_Lectura_y_Escritura/7_Lectura_y_Escritura.ipynb#7_Lectura_y_Escritura).\n",
+    "Lo más común es que los valores de las variables sean ingresados por el usuario o [leyendo un archivo de texto](../7_Lectura_y_Escritura/7_Lectura_y_Escritura.ipynb#7_Lectura_y_Escritura \"Ir al capítulo 7 Lectura y Escritura\").\n",
     "\n",
-    "Por medio de `input()` se solicita al usuario el ingreso de datos, tenga en cuenta que el valor ingresado es un tipo de dato *string*, por lo tanto, si se pretende realizar operaciones aritméticas con estos datos, se debe realizar una conversión a *integer* o *float*. <a id='Min-eje_Ingreso-de-datos'></a>\n",
+    "Por medio de `input()` se solicita al usuario el ingreso de datos. Hay que tener en cuenta que el valor ingresado siempre es un tipo de dato *string*, por lo tanto, si se pretende realizar operaciones aritméticas con estos datos, se debe realizar una conversión a *integer* o *float*. <a id='Min-eje_Ingreso-de-datos'></a>\n",
     "\n",
     "```python\n",
     "# Mini_Ejemplo: Ingreso de datos por el usuario\n",
@@ -464,7 +471,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Como puede comprobar, en el mini ejemplo anterior, el usuario puede ingresar cualquier valor, hasta letras y el programa va a seguir corriendo, aunque estos datos sean incorrectos, para que no pase esto el apartado [6.4. Validaciones](../6_Funciones/6_Funciones.ipynb#6.4_Validaciones) contiene algunos ejemplos de cómo validar las entradas del usuario."
+    "Como se puede comprobar en el mini ejemplo anterior el usuario puede ingresar cualquier valor hasta letras, aunque lo que se pide es un número par e impar el programa no verifica, para que no pase esto el apartado [6.4. Validaciones](../6_Funciones/6_Funciones.ipynb#6.4_Validaciones) contiene algunos ejemplos de cómo validar las entradas del usuario."
    ]
   },
   {
@@ -534,11 +541,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- En el caso de las variables string, se pueden usar la suma para concatenar cadeneas, como en el [Mini_Ejemplo: Variables str](#Min-eje_Variables-str) con la variable SumaCadenas.\n",
-    "###### **Ojo:** La suma solo puede ser cadenas con cadenas, no cadenas con número ya que esto último nos arrojaría [Type error](#Min-eje_Error-operaciones-con-cadenas \"Mini_Ejemplo:Error operaciones con cadenas \")  \n",
+    "- En el caso de las variables string la suma y la multiplicación en realidad son para concatenar cadenas, como muestra el [Mini_Ejemplo: Variables str](#Min-eje_Variables-str) con la variable SumaCadenas.\n",
+    "###### **Ojo:** La concatenación solo puede ser entre cadenas, no entre cadenas y números, ya que, esto último nos provocaría un [Type error](#Min-eje_Error-operaciones-con-cadenas \"Mini_Ejemplo:Error operaciones con cadenas \")  \n",
     "\n",
     "\n",
-    "- También se puede usar la multipilicación para repetir las cadenas, tantas veces se indique.\n",
+    "- También se puede usar la multiplicación para repetir las cadenas, tantas veces se indique.\n",
     "\n",
     "Ingrese el siguiente código en la consola y compruebe el resultado.\n",
     "<a id=\"Min-eje_Multiplicacion-de-cadenas\"></a>\n",
@@ -567,7 +574,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Si se intenta realizar operaciones diferentes a una suma entre cadenas o multiplicación, arrojará *Type Error*.\n",
+    "- Si se realizan operaciones diferentes a una suma entre cadenas o multiplicación, el programa lanzará la excepción *Type Error*.\n",
     "<a id=\"Min-eje_Error-operaciones-con-cadenas\"></a>\n",
     "\n",
     "~~~python\n",
@@ -585,6 +592,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='Ayuda-Directorio'></a>\n",
     "## **2.3 Ayuda y Directorio** <a id='2.3_Ayuda-y-Directorio'></a>"
    ]
   },
@@ -594,9 +602,9 @@
    "source": [
     "Hay dos comandos que son muy útiles `help()` y `dir()`.\n",
     "\n",
-    "Si se necesita buscar ayuda sobre alguna palabra clave, método o tipo de variable se puede usar help(asunto) y se presentará la documentación que tenga disponible al respecto. \n",
+    "Si se necesita buscar ayuda sobre alguna palabra clave, método o tipo de variable se puede usar help(elemento) y se presentará la documentación disponible al respecto. \n",
     "\n",
-    "Para practicar, por favor corra en la consola el siguiente comando:`help (str)`, de esa forma obtendrán la documentación de ayuda sobre las variables de texto (string)"
+    "Para practicar, por favor corra en la consola el siguiente comando: `help (str)`. De esa forma se obtendrá la documentación de ayuda sobre las variables de texto (string)."
    ]
   },
   {
@@ -634,9 +642,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finalmente para obtener mayor información sobre la funcionalidad, parámetros y resultados de un método determinado, se puede usar el comando `help(objeto.método)`  \n",
+    "Finalmente para obtener mayor información sobre la funcionalidad, parámetros y resultados de un método o una función determinada se usa el comando `help(objeto.método)`  \n",
     "\n",
-    "Por ejemplo, si se escribe en la consola `help(str.isnumeric)`, el resultado que arroja es: \n",
+    "Por ejemplo, si se escribe en la consola `help(str.isnumeric)` el resultado será: \n",
     "~~~python\n",
     "Help on method_descriptor:\n",
     "\n",
@@ -679,7 +687,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Con el comando help o con el método que prefiera, investigue para sirven las siguientes funciones y pruébelas en la siguiente variable:\n",
+    "Con el comando help investigue para que sirven los siguientes métodos de las variables string y pruébelos en la siguiente variable:\n",
     "\n",
     "~~~python\n",
     "ME2=\"God, grant me the serenity to accept the things I cannot change,\\nCourage to change the things I can,\\nAnd wisdom to know the difference.\"\n",
