--- a/5_Estructura_de_Datos/5_Estructura_de_Datos.ipynb
+++ b/5_Estructura_de_Datos/5_Estructura_de_Datos.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![Fig3_Encabezado.png](../Fig3_Encabezado.png)\n",
+    "\n",
+    "---------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 5. Estructuras de Datos Básicas <a id='5_Estructura-de-Datos-Basicas'></a>"
    ]
   },
@@ -11,7 +20,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
     "### [5.1. Listas](#5.1_Listas)   \n",
     ">[5.1.1. Métodos de las Listas](#5.1.1_Metodos-de-las-Listas)  \n",
     ">>[5.1.1.1. Métodos de Adición](#5.1.1.1_Metodos-de-Adicion)  \n",
@@ -49,10 +57,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **5.1. Listas** <a id='5.1_Listas'></a>  \n",
-    "Mi tipo de estructura de datos favorito en Python es la lista `list`. Como mencioné en el capítulo anterior es un objeto iterable, es similar al array que se usa en otros lenguajes, con algunas características que hacen que su uso sea muy práctico y flexible.\n",
+    "<a id='Listas'></a>  \n",
     "\n",
-    "Una lista se crea usando corchetes `{ }` y separando los elementos por comas, cada elemento de una lista puede ser cualquier tipo de objeto. <a id='Min-eje_Lista'></a>\n",
+    "## **5.1. Listas** <a id='5.1_Listas'></a>  \n",
+    "Uno de los tipos de dato más útiles en Python son las listas `list`. Como se mencionó en el capítulo anterior es un objeto iterable similar al array que se usa en otros lenguajes, pero tiene algunas características que hacen que su uso sea muy práctico y flexible.\n",
+    "\n",
+    "Una lista se crea usando corchetes `[ ]` y separando los elementos por comas. Cada elemento de una lista puede ser de cualquier tipo de dato así sea diferente al de los otros elementos. <a id='Min-eje_Lista'></a>\n",
     "\n",
     "~~~python\n",
     "# Mini_Ejemplo: Lista\n",
@@ -79,7 +89,7 @@
    "source": [
     "<a id='Listas'></a>\n",
     "## 5.1.1. Métodos de las Listas <a id='5.1.1_Metodos-de-las-Listas'></a>\n",
-    "Al ser un iterable como un string, en las listas el [manejo de los índices](../4_Bucles-e-Iterables/4_Bucles-e-Iterables.ipynb#4.1.2_Indices \"Ir al apartado 4.1.2_Índices\") y los [métodos báiscos](../4_Bucles-e-Iterables/4_Bucles-e-Iterables.ipynb#4.1.1_Metodos-Basicos \"Ir al apartado 4.1.1 Metodos Básicos\") que se vió en el capitulo anterior (`len`, `count`, e `index`) son iguales, sin embargo, una de las grandes ventajas que tienen las listas es que son objetos mutables, es decir, que se puede cambiar, adicionar, eliminar y ordenar sus elementos, en los siguientes puntos se enseñaran los métodos que permiten hacerlo. <a id='Min-eje_Cambio-de-Elementos'></a>\n",
+    "Al ser un iterable como un string en las listas el [manejo de los índices](../4_Bucles_e_Iterables/4_Bucles_e_Iterables.ipynb#Indices \"Ir al apartado 4.1.2_Índices\") y los [métodos báiscos](../4_Bucles_e_Iterables/4_Bucles_e_Iterables.ipynb#Metodos-Basicos \"Ir al apartado 4.1.1 Metodos Básicos\") que se vieron en el capítulo anterior (`len`, `count`, e `index`)  se comportan igual, sin embargo, una de las grandes ventajas que tienen las listas es que son objetos mutables, es decir, que se puede cambiar, adicionar, eliminar y ordenar sus elementos. En los siguientes apartados se enseñarán los métodos que permiten modificarlas. <a id='Min-eje_Cambio-de-Elementos'></a>\n",
     "\n",
     "~~~python\n",
     "# Mini_Ejemplo: Cambio de Elementos.\n",
@@ -108,7 +118,7 @@
    "source": [
     "### 5.1.1.1. Métodos de Adición <a id='5.1.1.1_Metodos-de-Adicion'></a>\n",
     "- **Append:** <a id='Min-eje_append'></a>\n",
-    "Con este método se puede agregar un elemento al final de la lista, así sea una lista vacía.\n",
+    "Con este método se puede agregar un elemento al final de la lista así sea una lista vacía.\n",
     "\n",
     "~~~python\n",
     "# Mini_Ejemplo: append\n",
@@ -136,7 +146,7 @@
    "metadata": {},
    "source": [
     "- **Extend:** <a id='Min-eje_extend'></a>\n",
-    " Este método agrega los elementos de una lista, al final de otra. el siguiente ejemplo muestra como se agreaga a lista_a cada uno de los elementos de la lista_b.\n",
+    " Este método agrega los elementos de una lista al final de otra. El siguiente Mini_ejemplo muestra como se agreaga a la `lista_a` cada uno de los elementos de la `lista_b`.\n",
     " \n",
     "~~~python\n",
     "# Mini_Ejemplo: extend\n",
@@ -163,7 +173,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###### **Ojo:** Si se usa el método append en ejemplo anterior, se agregaría la lista_b como un elemento en la lista_a. <a id='Min-eje_append-Lista'></a>\n",
+    "###### **Ojo:** Si se usa el método `append` en Mini_ejemplo anterior se agregaría la `lista_b` como un elemento en la `lista_a`. <a id='Min-eje_append-Lista'></a>\n",
     " \n",
     "~~~python\n",
     "# Mini_Ejemplo: append Lista\n",
@@ -191,7 +201,7 @@
    "metadata": {},
    "source": [
     "- **Insert:** <a id='Min-eje_insert'></a>\n",
-    "Con este método es posible agregar a una lista en una posición específica un elemento. Hay que tener especial cuidado con este método ya que requiere tener un correcto [manejo de los índices](../4_Bucles-e-Iterables/4_Bucles-e-Iterables.ipynb#4.1.2_Indices \"Ir al apartado 4.1.2_Índices\") para no obtener un [error de indexación.](../4_Bucles-e-Iterables/4_Bucles-e-Iterables.ipynb#Min-eje_Error-de-Indexacion \"Ir al Mini_Ejemplo: Error de Indexación\")\n",
+    "Con este método es posible agregar un elemento a una lista en una posición específica. Hay que tener especial cuidado con este método ya que requiere tener un correcto [manejo de los índices](../4_Bucles_e_Iterables/4_Bucles_e_Iterables.ipynb#Indices \"Ir al apartado 4.1.2_Índices\") para no obtener un error de indexación.\n",
     "\n",
     "~~~python\n",
     "# Mini_Ejemplo: insert\n",
@@ -252,9 +262,9 @@
    "metadata": {},
    "source": [
     "<a id='Min-eje_pop-con-indices'></a>\n",
-    "Al igual que con el método insert se debe tener un buen [manejo de los índices](../4_Bucles-e-Iterables/4_Bucles-e-Iterables.ipynb#4.1.2_Indices \"Ir al apartado 4.1.2_Índices\") para no tener un [error de indexación.](../4_Bucles-e-Iterables/4_Bucles-e-Iterables.ipynb#Min-eje_Error-de-Indexacion \"Ir al Mini_Ejemplo: Error de Indexación\") \n",
+    "Al igual que con el método insert se debe tener un buen [manejo de los índices](../4_Bucles_e_Iterables/4_Bucles_e_Iterables.ipynb#Indices \"Ir al apartado 4.1.2_Índices\") para no obtener un error de indexación.\n",
     "\n",
-    "Se debe tener en cuenta que si elimina un elemento diferente al úlitmo, los índices de la lista van a cambiar, por ejemplo, el siugiente mini ejemplo muestra como eliminar los elementos en las posiciones impares de la lista_b inicial, es decir, los elementos 1, 3, y 5, con los índices [0], [1], [3] respectivamente, sin embargo, estos índices cambiaran una vez se empiecen a eliminar los elementos.\n",
+    "Si elimina un elemento diferente al último los índices de la lista van a cambiar. Por ejemplo, el siguiente Mini_ejemplo muestra como eliminar los elementos en las posiciones impares de la `lista_b inicial`, es decir, los elementos 1, 3, y 5, con los índices [0], [1], [3] respectivamente, sin embargo, estos índices cambiaran una vez se empiecen a eliminar los elementos.\n",
     "\n",
     "~~~python\n",
     "# Mini_Ejemplo: pop con índices\n",
@@ -283,7 +293,7 @@
    "metadata": {},
    "source": [
     "- **remove:**<a id='Min-eje_remove'></a>\n",
-    "Con este método se puede eliminar el elemento que se indique de la lista, en el siguiente Mini_Ejemplo se va a eliminar todos los elemento diferentes a un entero.\n",
+    "Con este método se puede eliminar el elemento que se indique de la lista. En el siguiente Mini_Ejemplo se van a eliminar todos los elementos diferentes a un entero.\n",
     "\n",
     "~~~python\n",
     "# Mini_Ejemplo: remove\n",
@@ -311,7 +321,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Si se indica un elemento que **no está** en la lista nos va a arrojar un Value Error. <a id='Min-eje_remove-ValueError'></a>\n",
+    "Si se indica un elemento que **no está** en la lista retornará un Value Error. <a id='Min-eje_remove-ValueError'></a>\n",
     "~~~python\n",
     "# Mini_Ejemplo: remove ValueError\n",
     "\n",
@@ -390,7 +400,7 @@
    "metadata": {},
    "source": [
     "- **sort:**<a id='Min-eje_sort'></a>\n",
-    "Este método ordena de forma ascendente los elementos de la lista, tiene dos parámetros `key` el cual se verá al [Ordenar una \"Matriz\"](#Min-eje_Ordenar-una-Matriz \"Ir al sección\") y `reverse`, que sirve cuando se desea ordenar los elementos de forma descendente.\n",
+    "Este método ordena de forma ascendente los elementos de la lista. Tiene dos parámetros `key` el cual se verá al [Ordenar una \"Matriz\"](#Min-eje_Ordenar-una-Matriz \"Ir al sección\") y `reverse`, que sirve cuando se desea ordenar los elementos de forma descendente.\n",
     "\n",
     "~~~python\n",
     "# Mini_Ejemplo: sort\n",
@@ -439,9 +449,9 @@
    "metadata": {},
    "source": [
     "- **sorted:**<a id='Min-eje_sorted'></a>\n",
-    "Esta función realiza una copia de la lista indicada con sus elementos ordenados en una nueva variable, sin modificar la lista original.\n",
+    "Esta función realiza una copia de la lista ordenada en una nueva variable sin modificar la lista original.\n",
     "\n",
-    "Como muestra el siguiente Mini_Ejemplo, si se intenta hacer con el método `.sort`, modificará la lista original, y no guardará la lista ordenada en la nueva variable.\n",
+    "Como muestra el siguiente Mini_Ejemplo, si se intenta hacer con el método `.sort` modificará la lista original y no guardará la lista ordenada en la nueva variable.\n",
     "\n",
     "~~~python\n",
     "# Mini_Ejemplo: sorted\n",
@@ -926,8 +936,9 @@
    "metadata": {},
    "source": [
     "<a id='MDic'></a>\n",
+    "<a id='5.3.1_Metodos-de-los-Diccionarios'></a>\n",
     "## 5.3.1. Métodos de los Diccionarios \n",
-    "A continuación están los métodos principales de los diccinarios. <a id='5.3.1_Metodos-de-los-Diccionarios'></a>\n",
+    "A continuación están los métodos principales de los diccinarios. \n",
     "\n",
     "- **dict( ):** <a id='Min-eje_dic'></a>\n",
     "Es una función que recibe como parámetro una representación de un diccionario, y si es válida, devuelve un diccionario de datos.\n",
