--- a/Home.ipynb
+++ b/Home.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='Home'><a/>\n",
     "![Fig3_Encabezado.png](Fig3_Encabezado.png)\n",
     "\n",
     "---------------------"
@@ -13,8 +14,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='Home'><a/>\n",
-    "![Fig2_Titulo](Fig2_Titulo.jpg \"Figura 2: Guía de Python Versión 1.0\")\n",
+    "![Fig2_Titulo](Fig2_Titulo.jpg \"Figura 2: Guía de Implementación de Algoritmos de Ingeniería Industrial Versión 01.0.0\")\n",
     "    \n",
     "----"
    ]
@@ -23,27 +23,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## [**1. Introducción**](1_Introduccion/1_Introduccion.ipynb#1_Introduccion) <!--()-->    "
+    "## [**1. Introducción**](1_Introduccion/1_Introduccion.ipynb#1_Introduccion)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### [1.1. Presentación](1_Introduccion/1_Introduccion.ipynb#1.1_Presentacion) <!--()-->  \n",
-    "#### [1.2. Instalación](1_Introduccion/1_Introduccion.ipynb#1.2_Instalacion) <!--()-->    \n",
-    "#### [1.3. Algunos IDE](1_Introduccion/1_3_Algunos_IDE/1_3_1_IDLE/1_3_1_IDLE.ipynb#1.3_Algunos_IDE) <!--()--> \n",
-    ">[1.3.1. IDLE](1_Introduccion/1_3_Algunos_IDE/1_3_1_IDLE/1_3_1_IDLE.ipynb#1.3.1_IDLE) <!--()-->  \n",
-    "[1.3.2. Jupyter](1_Introduccion/1_3_Algunos_IDE/1_3_2_JupyterLab/1_3_2_JupyterLab.ipynb#1.3.2_JupyterLab) <!--()-->  \n",
+    "#### [1.1. Presentación](1_Introduccion/1_Introduccion.ipynb#1.1_Presentacion)   \n",
+    "#### [1.2. Instalación](1_Introduccion/1_Introduccion.ipynb#1.2_Instalacion)     \n",
+    "#### [1.3. Algunos IDE](1_Introduccion/1_3_Algunos_IDE/1_3_1_IDLE/1_3_1_IDLE.ipynb#1.3_Algunos_IDE)  \n",
+    ">[1.3.1. IDLE](1_Introduccion/1_3_Algunos_IDE/1_3_1_IDLE/1_3_1_IDLE.ipynb#1.3.1_IDLE)   \n",
+    "[1.3.2. Jupyter](1_Introduccion/1_3_Algunos_IDE/1_3_2_JupyterLab/1_3_2_JupyterLab.ipynb#1.3.2_JupyterLab)   \n",
     "\n",
-    "#### [1.4 Instrucciones Guía Interactiva](1_Introduccion/1_4_Instrucciones_Guia_Interactiva/1_4_Instrucciones_Guia_Interactiva.ipynb#1.4_Insutrucciones-Guia-Interactiva) <!--()-->  "
+    "#### [1.4 Instrucciones Guía Interactiva](1_Introduccion/1_4_Instrucciones_Guia_Interactiva/1_4_Instrucciones_Guia_Interactiva.ipynb#1.4_Insutrucciones-Guia-Interactiva)   "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## [**2. Elementos Básicos**](2_Elementos_Basicos/2_Elementos_Basicos.ipynb#2_Elementos-Basicos) <!--()-->"
+    "# **Parte 1: Guía de Python**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## [**2. Elementos Básicos**](2_Elementos_Basicos/2_Elementos_Basicos.ipynb#2_Elementos-Basicos) "
    ]
   },
   {
@@ -200,6 +207,13 @@
     "#### [9.4. Paquetes de Terceros](9_Modulos/9_Modulos_y_Paquetes.ipynb#9.4_Paqutes-de-Terceros)   \n",
     ">[9.4.1. Instalación de Paquetes](9_Modulos/9_Modulos_y_Paquetes.ipynb#9.4.1_Instalacion-de-Paquetes)   \n",
     "[9.4.2. Instalación de pip](9_Modulos/9_Modulos_y_Paquetes.ipynb#9.4.2_Instalacion_de_pip)   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **Parte 2: Guía de Algoritmos**"
    ]
   },
   {
